Fixes button vertical align on polls list

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -117,6 +117,10 @@ a {
   display: inline-block;
 }
 
+.aling-middle {
+  vertical-align: middle;
+}
+
 .sidebar-divider {
   border-top: 1px solid $border;
   margin-top: $line-height;
